tests/ui/g-loop-control-wire-path.stderr
error[E0080]: evaluation panicked: loop control messages require local path
 --> src/global.rs
  |
  |         crate::global::validate_send_contract::<From, To, M>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::g::Msg<125, hibana::integration::cap::GenericCapToken<WireLoopControlKind>, WireLoopControlKind>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_send_contract::<Role<0>, Role<1>, Msg<125, GenericCapToken<WireLoopControlKind>, WireLoopControlKind>>`
 --> src/global.rs
  |
  |     validate_message_control_contract::<M>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_message_control_contract::<Msg<125, GenericCapToken<WireLoopControlKind>, WireLoopControlKind>>`
 --> src/global.rs
  |
  |         2 => validate_token_control_payload_contract(spec),
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_token_control_payload_contract`
 --> src/global.rs
  |
  |     validate_control_descriptor_contract(spec);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_control_descriptor_contract`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |                 panic!("loop control messages require local path");
  |                 -------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_send_contract::<From, To, M>();
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<125, GenericCapToken<WireLoopControlKind>, WireLoopControlKind>, 0>`
  --> tests/ui/g-loop-control-wire-path.rs:37:13
   |
37 |       let _ = g::send::<
   |  _____________^
38 | |         g::Role<0>,
39 | |         g::Role<1>,
40 | |         g::Msg<
...  |
45 | |         0,
46 | |     >();
   | |_______^
